--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
 <h1>diclaimer ce projet vien d'un tutoriel sur youtube</h1>
+<a href="https://lfichouledantec.github.io/portfolio/index.html" class="btn btn-primary" target="_blank">retour</a>
 <canvas></canvas>
 <script src="index.js"></script>
