--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <h1>diclaimer ce projet vien d'un tutoriel sur youtube</h1>
 <a href="https://lfichouledantec.github.io/portfolio/index.html" class="btn btn-primary" target="_blank">retour</a>
+<a href="https://www.youtube.com/watch?v=vyqbNFMDRGQ" class="btn btn-primary" target="_blank">le tuto</a>
 <canvas></canvas>
 <script src="index.js"></script>
